# win-dir-fan

./: .gitignore  EULA.md  LICENSE  MARKETING.md  README.md  RELEASE_DRAFT.md  app.py  check_mousebuttons.py  fan_widget.py  print_events.py  pyinstaller.spec  requirements.txt  test_qimage.py  test_qimage_app.py  test_thumb.py  thumbnail_worker.py  win-dir-fan.sln
.github/: copilot-instructions.md
.github/workflows/: release.yml
FanFolder/: CMakeLists.txt
FanFolder/resources/: app.manifest  app.rc  resource.h
FanFolder/src/: Config.cpp  Config.h  FanWindow.cpp  FanWindow.h  FileService.cpp  FileService.h  GraphService.cpp  GraphService.h  Localization.cpp  Localization.h  MainWindow.cpp  MainWindow.h  ShellDrag.cpp  ShellDrag.h  main.cpp  pch.h
FanFolderApp/: FanFolderApp.csproj  FanForm.cs  FileService.cs  MainHiddenForm.cs  NativeMethods.cs  Program.cs  ShellDragHelper.cs  app.manifest  appsettings.json
FanFolderCpp/resources/: app.rc
FanFolderCpp/src/: Config.cpp  Config.h  FanWindow.cpp  FanWindow.h  FileService.cpp  FileService.h  MainWindow.cpp  MainWindow.h  ShellDrag.cpp  ShellDrag.h  main.cpp  pch.h
installer/: Build-Installer.ps1  FanFolder.wixproj  FanFolder.wxs  FanFolderBundle.wixproj  FanFolderBundle.wxs  Install.ps1  License.rtf  setup.iss  wix.json
installer/bundle/: FanFolderBundle.wixproj  FanFolderBundle.wxs
installer/winget/: OleBhartvigsen.FanFolder.installer.yaml  OleBhartvigsen.FanFolder.locale.en-US.yaml  OleBhartvigsen.FanFolder.yaml
prompt/: opret.md
scripts/: create_release.sh  generate-winget-manifests.ps1
tools/: GenIcon.ps1
